Oct 08: [FIX] Bug Fixed 'theme_upshift'

--- a/theme_upshift/static/src/css/style.css
+++ b/theme_upshift/static/src/css/style.css
@@ -1151,6 +1151,9 @@ padding-top:50px
   width: 100%;
   z-index: 999;
 }
+#HeaderUser{
+    opacity: 1 !important;
+}
 .navigation .wrapper .navbar {
   padding-top: 15px;
   padding-bottom: 20px;
@@ -1209,6 +1212,24 @@ padding-top:50px
   font-size: 16px;
   padding: 0px 15px;
 }
+.navigation .wrapper .navbar .navbar-nav .nav-link {
+      color: var(--white-color);
+      opacity:1 !important
+
+}
+.o_no_autohide_item:hover {
+  background-color: var(--brand-blue-100);
+  border-radius: 5px !important;
+}
+.o_no_autohide_item a{
+  font-size: 20px;
+  padding: 0px 15px;
+   &:hover {
+        background-color: var(--brand-blue-100);
+        color: var(--brand-blue-900);
+  }
+}
+
 @media (max-width: 1200px) {
   .navigation .wrapper .navbar .navbar-nav .nav-item .nav-link {
     padding: 0px 8px;
@@ -1224,7 +1245,14 @@ padding-top:50px
   color: var(--brand-blue-900);
   font-weight: 500;
 }
+.navigation .wrapper .navbar .navbar-nav .nav-link:hover {
+  color: var(--brand-blue-900);
+  font-weight: 500;
+}
 .navigation .wrapper .navbar .navbar-nav .nav-item .nav-link2 {
+  color: var(--black-color);
+}
+.navigation .wrapper .navbar .navbar-nav .nav-link2 {
   color: var(--black-color);
 }
 .navigation .wrapper .navbar .dropdown-menu {
@@ -1880,7 +1908,8 @@ body {
 
 @media (max-width:992px){
 .navbar-expand-lg .offcanvas .offcanvas-body {
-	justify-content: start !important;
+	height: 100% !important;
+	flex-direction: column;
 }
 .navigation .wrapper .navbar .navbar-nav .nav-item .nav-link2 {
 	color: white;
@@ -1906,4 +1935,9 @@ body {
 .portfolio_wrapper{
     margin:20px;
 }
+}
+.oe_login_form{
+    .btn-secondary {
+        padding: 0.475rem 1rem !important
+    }
 }
