--- a/theme_upshift/static/src/scss/layouts/_navbar.scss
+++ b/theme_upshift/static/src/scss/layouts/_navbar.scss
@@ -1,3 +1,10 @@
+@media (max-width:992px) {
+    .offcanvas-body{
+            height: 100% !important
+        }
+}
+
+
 .navigation {
     background-color: transparent;
     position: fixed;
@@ -86,6 +93,7 @@
 
                     }
                 }
+
             }
 
 .dropdown-menu{
@@ -212,9 +220,39 @@ background-repeat: no-repeat;
   transform: translateY(-10px) rotate(-45deg);
 }
 
+.user_login .nav-item .dropdown-menu a {
+  color: white; // Set the color to white
+}
+.o_no_autohide_item a{
+  &:hover {
+     color: var(--brand-blue-900);
+     font-weight: 500;
+    }
+}
 
+.o_no_autohide_item{
+   &:hover {
+                        background-color: var(--brand-blue-100);
+                        border-radius: 5px !important;
+                    }
+                    a {
+                        font-size: 16px;
+                        padding: 0px 15px;
+                        @media (max-width:1200px) {
+                            padding: 0px 8px;
+                        }
+                        @media (max-width:992px) {
+                            padding: 10px 0px;
+                            padding-left: 15px;
+                        }
+                        &:hover {
+                            color: var(--brand-blue-900);
+                            font-weight: 500;
+                        }
+                    }
 
+                    .nav-link2{
+                        color: var(--black-color);
 
-
-
-
+                    }
+}
